<resources>
    <string name="app_name">Rolecall</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="submit">Submit</string>
    <string name="crn">CRN #</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="remember">Remember</string>
</resources>
