<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintHorizontal_bias="1.0">

        <android.support.constraint.ConstraintLayout
                android:padding="@dimen/one"
                android:layout_width="391dp"
                android:layout_height="324dp">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/email"
                    android:ems="10"
                    android:id="@+id/username" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="@dimen/one"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/one"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintVertical_bias="0.057"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:ems="10"
                    android:hint="@string/password"
                    android:id="@+id/password" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/one" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/one" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toBottomOf="@+id/username" app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintVertical_bias="0.111"/>
            <Button
                    android:text="@string/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="108dp" app:layout_constraintVertical_bias="0.861"/>
            <CheckBox
                    android:text="@string/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/remuser" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toBottomOf="@+id/password" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/one" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/one" app:layout_constraintHorizontal_bias="0.277"
                    app:layout_constraintVertical_bias="0.0"/>
            <CheckBox
                    android:text="@string/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rempass" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toTopOf="@+id/password" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/one" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/one" app:layout_constraintHorizontal_bias="0.277"
                    app:layout_constraintVertical_bias="1.0"/>
            <Button
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login"
                    android:layout_marginStart="@dimen/one" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="@dimen/one" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/one"
                    app:layout_constraintVertical_bias="0.85" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.752"/>

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="@dimen/one"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/one" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/one"
                app:layout_constraintHorizontal_bias="0.487" app:layout_constraintVertical_bias="0.281"/>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>