<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/one"
            android:layout_height="321dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="@dimen/two"
    >

        <android.support.constraint.ConstraintLayout
                android:padding="@dimen/one"
                android:layout_width="390dp"
                android:layout_height="324dp"
                android:paddingEnd="@dimen/nine"
                android:paddingStart="@dimen/three"
                android:paddingBottom="@dimen/ten">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="Email"
                    android:id="@+id/email" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="@dimen/one"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/one"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.251"
                    app:layout_constraintVertical_bias="0.0"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/newpass"
                    android:id="@+id/firstpass"
                    android:layout_marginStart="@dimen/one"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/one"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.251"
                    android:layout_marginBottom="@dimen/one" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="@dimen/one" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.236"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/confirmpass"
                    android:id="@+id/confirmpass" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/one" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/one"
                    android:layout_marginBottom="@dimen/one" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.251"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.465"/>
            <Button
                    android:text="@string/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit"
                    android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/one" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/one" app:layout_constraintHorizontal_bias="0.758"
                    android:layout_marginTop="@dimen/one" app:layout_constraintTop_toBottomOf="@+id/classid"
                    app:layout_constraintVertical_bias="0.578"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:hint="@string/crn"
                    android:id="@+id/classid" android:layout_marginTop="@dimen/one"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="@dimen/one"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/one"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.251"
                    app:layout_constraintVertical_bias="0.725"/>

            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="53dp"
                    android:id="@+id/progressBar"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/one"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/one"
                    android:layout_marginTop="@dimen/one" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="@dimen/one"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.419"
                    app:layout_constraintHorizontal_bias="0.697"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>